pod1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    name: pod1
spec:
  volumes:
    - name: birke
      confifMap:
        name: birke
  containers:
    - name: pod1
      image: nginx:alpine
      volumeMounts:
        - name: birke
          mountPath: /etc/birke/*
