pod_priority.yml
apiVersion: v1
kind: Pod
metadata:
  name: important
  namespace: lion
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: nginx:1.21.6-alpine
    resources:
      limits:
        memory: "1Gi"
        cpu: "500m"
    ports:
      - containerPort: 80
  priority: 300000000
  priorityClassName: level3
