service1.yml
apiVersion: v1
kind: Service
metadata:
  name: asia
spec:
  selector:
    app: asia
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
